--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Government of Ireland</title>
+    <title>Ireland on Roblox</title>
     <link rel="icon" href="img/logo.png" sizes="32x32" type="image/png">
     <link rel="stylesheet" href="css/index.css"> <!-- Correct CSS path -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -64,14 +64,10 @@
                 <h3>Connect with us</h3>
                 <div class="social-icons">
                     <a href="https://discord.gg/btJ9cVPa5m"><i class="fab fa-discord"></i></a>
-                    <a href="https://twitter.com/wearezop"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://tiktok.com/@wearezop"><i class="fab fa-tiktok"></i></a>
-                    <a href="https://instagram.com/wearezop/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://tiktok.com/@rxireland"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://instagram.com//"><i class="fab fa-instagram"></i></a>
                 </div>
-            </div>
-            <div class="dark-mode-toggle">
-                <label for="dark-mode-switch">Dark Mode</label>
-                <input type="checkbox" id="dark-mode-switch" aria-label="Toggle Dark Mode">
             </div>
         </div>
     </footer>
