--- a/public/index.html
+++ b/public/index.html
@@ -11,35 +11,17 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-default" role="navigation" aria-labelledby="RebootSrMainMenuNav" id="main-navbar">
-            <div class="container">
-                <div class="navbar-header">
-                    <a href="https://rxireland.org" navbar-logo-width="">
-                        <link rel="preload" as="image" href="/static/_reboot/_reboot_app/img/Image_Logo.png" fetchpriority="high">
-                        <img src="img/irelandroblox.png" alt="gov - Irish Government logo">
-                    </a>
-                </div>
-                <div class="collapse navbar-collapse" id="RebootMainMenu">
-                    <h2 class="sr-only" id="RebootSrMainMenuNav" style="color: #FFF;">
-                        Main navigation
-                    </h2>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/en/search/?sort_by=published_date&amp;type=press_releases">News</a></li>
-                        <li><a href="/en/help/departments/">Departments</a></li>
-                        <li><a href="/en/services/">Services</a></li>
-                        <li class="dropdown" style="border-left: 1px solid white">
-                            <a href="/pages/signin.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                Log in <span class="caret"></span>
-                            </a>
-                            <div class="col-sm-12 col-xs-12 hidden-lg hidden-md margin-bottom-sm"></div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+   <header>
+        <img src="../img/irelandroblox.png" alt="Government of Ireland Logo">
+        <nav>
+            <ul>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Departments</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="/pages/signin.html">Sign in</a></li>
+            </ul>
         </nav>
     </header>
-
     <div class="container">
         <h1>gov.ie</h1>
         <p>what the frick.</p>
