--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
     <footer>
         <div class="footer-content">
             <div class="footer-left footer-section">
-                <img src="/img/gov.ie.png" alt="Government of Ireland logo" class="footer-logo" />
-                <p>&copy; rxireland. All Rights Reserved</p>
+                <img src="/img/irelandroblox.png" alt="Government of Ireland logo" class="footer-logo" />
+                <p>&copy; Ireland on Roblox. All Rights Reserved</p>
             </div>
             <div class="footer-middle footer-section">
                 <h3>Company</h3>
