--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,16 @@
             </ul>
         </nav>
     </header>
+
+    <main class="bridgend-section">
+    <div class="bridgend-content">
+        <h2>Bridgend</h2>
+        <p>Experience the heart of Ireland like never before!</p>
+        <a href="https://www.roblox.com/games/17900744779" class="cta-button">Play now</a>
+    </div>
+</main>
+
+    
     <div class="container">
         <h1>gov.ie</h1>
         <p>what the frick.</p>
