--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
 
     
     <div class="container">
-        <h1>gov.ie</h1>
-        <p>what the frick.</p>
+        <h1>February 2025 General Elections</h1>
+        <p>The general elections of February 2025 are fast approaching, with three major parties—Fine Gael, Fianna Fáil, and Sinn Féin—competing for the chance to form the first Government of Ireland. Voters will have the opportunity to decide which party will lead the country in this pivotal moment of its political history, as each party presents its vision for the future.</p>
     </div>
 
     <footer>
