--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         <img src="../img/irelandroblox.png" alt="Government of Ireland Logo">
         <nav>
             <ul>
-                <li><a href="#">News</a></li>
+                <li><a href="https://discord.gg/btJ9cVPa5m">Join</a></li>
                 <li><a href="#">Departments</a></li>
                 <li><a href="#">Services</a></li>
                 <li id="auth-link"><a href="/pages/signin.html">Sign in</a></li>
