--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <!-- Discord Embed (Open Graph) -->
     <meta property="og:title" content="Ireland on Roblox">
     <meta property="og:description" content="Official website for Ireland on Roblox. Experience Ireland like never before in our flagship game, Bridgend. Engage in politics, governance, and more!">
-    <meta property="og:image" content="https://rxireland.org/img/irelandroblox.png">
+    <meta property="og:image" content="https://rxireland.org/img/embed.png">
     <meta property="og:url" content="https://rxireland.org">
     <meta property="og:type" content="website">
     
