--- a/public/pages/politics.html
+++ b/public/pages/politics.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="img/logo.png" sizes="32x32" type="image/png">
     
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     <!-- Scripts -->
