--- a/public/pages/politics.html
+++ b/public/pages/politics.html
@@ -6,7 +6,7 @@
     <title>Ireland's Politics</title>
     
     <!-- Favicon -->
-    <link rel="icon" href="img/logo.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="../img/logo.png" sizes="32x32" type="image/png">
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../css/index.css">
@@ -56,19 +56,19 @@
         <h2>Political Parties</h2>
         <div class="party-container">
             <div class="party-card">
-                <img src="img/fianna_fail.png" alt="Fianna Fáil Logo">
+                <img src="../img/fianna_fail.png" alt="Fianna Fáil Logo">
                 <h3>Fianna Fáil</h3>
                 <p><strong>Leader:</strong> [Name]</p>
                 <a href="https://discord.gg/fiannafail">Join Discord</a>
             </div>
             <div class="party-card">
-                <img src="img/sinn_fein.png" alt="Sinn Féin Logo">
+                <img src="../img/sinn_fein.png" alt="Sinn Féin Logo">
                 <h3>Sinn Féin</h3>
                 <p><strong>Leader:</strong> [Name]</p>
                 <a href="https://discord.gg/https://discord.gg/n4WW2ACJYA">Join Discord</a>
             </div>
             <div class="party-card">
-                <img src="img/fine_gael.png" alt="Fine Gael Logo">
+                <img src="../img/fine_gael.png" alt="Fine Gael Logo">
                 <h3>Fine Gael</h3>
                 <p><strong>Leader:</strong> [Name]</p>
                 <a href="https://discord.gg/finegael">Join Discord</a>
