--- a/public/pages/politics.html
+++ b/public/pages/politics.html
@@ -16,7 +16,7 @@
     <script src="/javascript/theme.js" defer></script>
 
     <!-- Discord Embed (Open Graph) -->
-    <meta property="og:title" content="Ireland's Politics">
+    <meta property="og:title" content="Politics and Governance - Ireland on Roblox">
     <meta property="og:description" content="Learn about Ireland's political system and the current government structure.">
     <meta property="og:image" content="https://rxireland.org/img/embed.png">
     <meta property="og:url" content="https://rxireland.org">
